--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -66,33 +66,33 @@
             around the catchment areas for dealerships. </h2>
               </div>
             </div>
-            <div class="row">
-                <ul class="col-xs-12 col-sm-2 col-sm-offset-5 social-container">
-                  <li class="facebook"></li>
-                  <li class="twitter"></li>
-                  <li class="linkedin"></li>
-                  <li class="email"></li>
-                  <li class="download"></li>
+            <div class="row social-container light">
+                <ul class="col-xs-12">
+                  <li class="facebook"><a href="#"></a></li>
+                  <li class="twitter"><a href="#"></a></li>
+                  <li class="linkedin"><a href="#"></a></li>
+                  <li class="email"><a href="#"></a></li>
+                  <li class="download border-left"><a href="#"></a></li>
                 </ul>
             </div><!--/.row-->
           </div><!--/.hero-->
         </div><!--.hero-wrapper-->
         <div class="top-benefits container-fluid">
           <div class="row">
-            <div class="col-sm-10 col-sm-offset-1">
-              <div class="benefit col-sm-4 col-xs-12">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="benefit col-sm-4 col-xs-10 col-xs-offset-1">
                 <h3>Client Profile</h3>
                 <p>UK branch of French car company</p>
                 <p>Europe’s second largest auto manufacturer</p>
                 <p>10,000 global outlets and repair centers</p>
               </div>
-              <div class="benefit col-sm-4 col-xs-12">
+              <div class="benefit col-sm-4 col-xs-10 col-xs-offset-1">
                 <h3>business goals</h3>
                 <p>Improve the accuracy of drive time estimates</p>
                 <p>Gain a more realistic view of the revenue potential</p>
                 <p>Understand traffic patterns and road conditions</p>
               </div>
-              <div class="benefit col-sm-4 col-xs-12">
+              <div class="benefit col-sm-4 col-xs-10 col-xs-offset-1">
                 <h3>case study benefits</h3>
                 <p>Optimize sales forecasting</p>
                 <p>Provide insights on best performing dealers</p>
@@ -103,29 +103,129 @@
         </div>
         <div class="tech-used container-fluid">
           <div class="row">
-            <div class="col-sm-12">
-              <h1>Technoloy Used</h1>
-              <p>Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="col-sm-12">
+                <div class="title-bg-detail"><h2>Technoloy Used</h2></div>
+                <p class="col-sm-8 col-sm-offset-2">Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
+              </div>
             </div>
-          </div> <!-- row -->
+          </div>
           <div class="row">
-            <div class="tech col-sm-4 col-xs-12">
-              <img src="http://placehold.it/350x150">
-              <h3>MapInfo Professional</h3>
-              <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-            </div>
-            <div class="tech col-sm-4 col-xs-12">
-              <img src="http://placehold.it/350x150">
-              <h3>MapInfo Professional</h3>
-              <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
-            </div>
-            <div class="tech col-sm-4 col-xs-12">
-              <img src="http://placehold.it/350x150">
-              <h3>MapInfo Professional</h3>
-              <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="tech col-sm-4 col-xs-12">
+                <img src="images/long-form-content/mapinfo-professional.png">
+                <h3><a href="#">MapInfo Professional</a></h3>
+                <p>A powerful desktop application for the visualization and analysis  of geographical information</p>
+              </div>
+              <div class="tech col-sm-4 col-xs-12">
+                <img src="images/long-form-content/mapinfo-drive-time.png">
+                <h3><a href="#">MapInfo Drivetime</a></h3>
+                <p>TomTom Speed Profile Data to calculate accurate travel time</p>
+              </div>
+              <div class="tech col-sm-4 col-xs-12">
+                <img src="images/long-form-content/pca.png">
+                <h3>PCA’s Gravitiy Modelling System</h3>
+                <p>Seamless integration with  Peugeot’s Gravity Modeling System for network planning and optimization</p>
+              </div>
             </div>
           </div>
         </div><!-- tech-used -->
+        <div class="copy-section container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="col-sm-12">
+                <div class="title-bg-detail"><h2>Executive Summary</h2></div>
+                <div class="quote">
+                  <blockquote>"As a network planning manager this has made a big difference to my role. We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."</blockquote>
+                  <p class="small bold">Andrew Bury,</p>
+                  <p class="small">Network Planning Manager,</p>
+                  <p class="small">Peugeot Citroën Automobiles, UK Ltd</p>
+                </div>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Peugeot Citroën Automobiles UK (PCA) maintains a network of franchised dealerships throughout the UK and aims to ensure as high a percentage of potential customers as possible live within close proximity by car of a showroom or service centre. It therefore makes extensive use of drive time data in planning its network and assigning optimal sales targets and territories to its dealers.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Using Pitney Bowes Software’s MapInfo Professional and Drivetime solutions with TomTom Speed Profile data, it can now base these calculations on the most accurate information derived from millions of real world car journeys. As a result dealers have full confidence in the reliability of the information they are supplied </p>
+              </div>
+            </div>
+          </div>
+        </div><!-- copy-section -->
+        <div class="copy-section container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="col-sm-12">
+                <div class="title-bg-detail"><h2>Business Challenge</h2></div>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PCA needed to improve the accuracy of its drive time profiles to make more informed decisions related to network planning.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">A reliance on generic drive time data – which calculates the time it takes to complete a specific road journey based purely on distance and speed limit – led to a lack of confidence in the underlying data and consequently on the reliability of the projections. For example, dealers would often query their stated catchment boundaries, as a journey estimated to take 30 minutes would in reality be much quicker or slower due to local road conditions and traffic trends.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This lack of insight made it difficult to set accurate sales performance targets for individual sites as it needed to know the total industry volume and existing vehicle parc figures (the number of potential customers for new cars and after service care within each area). It therefore wanted access to the most accurate journey information and to be able to combine it with industry data in order to calculate the true sales potential of each of its existing service centres and showrooms.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">It also wanted the ability to incorporate drive time data into its gravity modelling system in order to optimise the expansion or consolidation of its existing retail network.</p>
+              </div>
+            </div>
+          </div>
+        </div><!-- copy-section -->
+        <div class="copy-section container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="col-sm-12">
+                <div class="title-bg-detail"><h2>Solution</h2></div>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PCA implemented a bespoke version of MapInfo Drivetime combined with TomTom Speed Profile data to understand the overall accessibility by car of each of its showrooms and service centres within their standard opening hours.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">The software automatically calculates average journey times derived from millions of real world car journeys undertaken by users of TomTom sat nav systems 7 days a week between the hours of 7am and 7pm.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">This data is then displayed in MapInfo Professional, Pitney Bowes Software’s sophisticated visualisation and analysis tool where it is overlaid with other sources of demographic data to reveal further insight. For example, each service centre’s assigned territory can be matched against a DVLA database to set sales targets according to the number of Peugeot or Citroën cars between one and seven years old that are registered within that catchment. While each showroom’s performance can be measured against industry data and assessed according to the number of competing dealers in its area and its share of total new car sales within each postcode sector.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">As it is important to keep up to date with changes to the national road layout the data can be refreshed as appropriate and easily </p>
+              </div>
+            </div>
+          </div>
+        </div><!-- copy-section -->
+        <div class="copy-section container-fluid">
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <div class="col-sm-12">
+                <div class="title-bg-detail"><h2>Results and Benefits</h2></div>
+                <div class="quote">
+                  <blockquote class="col-sm-8 col-sm-offset-2 copy">"The extra intelligence this gives us is invaluable while the solution itself is extremely cost effective. There’s no denying that these tools provide us with excellent value for money."</blockquote>
+                  <p class="small bold">Andrew Bury,</p>
+                  <p class="small">Network Planning Manager,</p>
+                  <p class="small">Peugeot Citroën Automobiles, UK Ltd</p>
+                </div>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Since implementing the TomTom Speed Profile data there have been no queries made to PCA’s Network Development department regarding the accuracy of the drive time data. PCA has been so impressed with the performance of the solution that it has selected TomTom Speed Profile data as a basis for its bespoke gravity modelling system.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">PCA’s network planning is now based on the most accurate data possible, which takes the guesswork out of major decisions that carry far-reaching business implications. The benefits of the solution reach further into the company, for example the calculations carried out within the software are used by the Sales department of each brand in responding to large tenders for major fleet contracts.</p>
+                <p class="col-xs-12 col-sm-8 col-sm-offset-2 copy">Integration with the company’s gravity modelling software also better informs network optimisation activities. For example, the improved drive time data improves estimations of the financial implications to the business as a whole of opening, closing or relocating a showroom or dealership anywhere within the network.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row social-container">
+            <p class="share-copy col-sm-2 col-sm-offset-5">Share This</p>
+            <ul class="col-xs-12">
+              <li class="facebook"><a href="#"></a></li>
+              <li class="twitter"><a href="#"></a></li>
+              <li class="linkedin"><a href="#"></a></li>
+              <li class="email"><a href="#"></a></li>
+              <li class="download border-left"><a href="#"></a></li>
+            </ul>
+          </div><!--/.row-->
+        </div><!-- copy-section -->
+        <div class="more-section">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+                <div class="col-sm-12">
+                  <div class="title-bg-detail"><h2>More on Location Intelligence</h2></div>
+                  <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
+                      <a href="#">Case Study</a>
+                      <a href="#">Retail</a>
+                      <p>Barbian Insurance uses location and demographic data to improve risk evaluation</p>
+                  </div>
+                  <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
+                      <a href="#">Case Study</a>
+                      <a href="#">Finance</a>
+                      <p>Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                  </div>
+                  <div class="col-xs-12 col-sm-8 col-sm-offset-2 more-content">
+                      <a href="#">Article</a>
+                      <p>Using knowledge graphs to unlock consumer data</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><!-- more-section -->
       </div><!-- main-content -->
 
       <!-- build:js scripts/vendor.js -->
